syntax = "proto3";
package conductor.proto;

import "google/protobuf/struct.proto";

option java_package = "com.netflix.conductor.proto";
option java_outer_classname = "DynamicForkJoinTaskPb";
option go_package = "github.com/netflix/conductor/client/gogrpc/conductor/model";

message DynamicForkJoinTask {
    string task_name = 1;
    string workflow_name = 2;
    string reference_name = 3;
    map<string, google.protobuf.Value> input = 4;
    string type = 5;
}
